--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,5 +4,15 @@
 //layout
 @import "reboot";
 
+//mixin
+@import "mixin";
+
 //button
 @import "../components/button/style";
+
+//alert
+@import "../components/alert/style";
+
+p {
+  margin: 0;
+}
